syntax = "proto3";
package dlp.plugins.gloo.solo.io;
option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1/enterprise/plugins/dlp";

import "github.com/solo-io/gloo/projects/gloo/api/v1/core/matchers/matchers.proto";

import "envoy/type/percent.proto";
import "gogoproto/gogo.proto";
option (gogoproto.equal_all) = true;

message Config {
    repeated Action actions = 1;
}

message FilterConfig {
    repeated DlpRule dlp_rules = 1;
}

message DlpRule {
    core.matchers.gloo.solo.io.Matcher matcher = 1;

    repeated Action actions = 2;
}

message Action {
    enum ActionType {
        CUSTOM = 0;
        SSN = 1;
        MASTERCARD = 2;
        VISA = 3;
        AMEX = 4;
        DISCOVER = 5;
        JCB = 6;
        DINERS_CLUB = 7;
        CREDIT_CARD_TRACKERS = 8;
        ALL_CREDIT_CARDS = 9;
    }

    ActionType action_type = 1;

    CustomAction custom_action = 2;

    bool shadow = 3;
}

message CustomAction {
    string name = 1;
    repeated string regex = 2;
    string mask_char = 3;
    envoy.type.Percent percent = 4;
}
